--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <header id="hero">
         <div class="container">
-            <h1 id="hero-title" class="typewriter" data-text="Репетитор по информатике и программированию"></h1>
+            <h1 id="hero-title" class="typewriter" data-text="Репетитор по информатике"></h1>
             <div class="header-buttons" data-aos="fade-up" data-aos-delay="1500">
                 <a href="#services" class="cta-button">ЕГЭ</a>
                 <a href="#services" class="cta-button">ОГЭ</a>
