--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Репетитор по программированию - Коновалов Иван</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Press+Start+2P&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="font-mono">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
